--- a/assets/views/authModal.html
+++ b/assets/views/authModal.html
@@ -1,18 +1,100 @@
-<div class="modal-header">
+<!-- <div class="modal-header">
     <h3 class="modal-title">Login / Signup</h3>
-</div>
+</div> -->
 
-<div class="modal-body">
-    <form ng-submit="login()">
-        <div class="form-group">
+<!-- <div class="modal-body">
+    <div class="row">
+        <div class="col-md-6">
+            <form ng-submit="login()">
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="text" class="form-control" ng-model="email" required>
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" class="form-control" ng-model="password" required>
+                </div>
+                <input type="submit" value="Login" class="btn btn-primary">
+            </form>
+        </div>
+        <div class="col-md-6">
+            <form ng-submit="signup()">
+                <div class="form-group">
+                    <label>First Name</label>
+                    <input type="text" class="form-control" ng-model="signupFirstName" required>
+                </div>
+                <div class="form-group">
+                    <label>Last Name</label>
+                    <input type="text" class="form-control" ng-model="signupLastName" required>
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="text" class="form-control" ng-model="signupEmail" required>
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" class="form-control" ng-model="signupPassword" required>
+                </div>
+                <div class="form-group">
+                    <label>Password Confirm</label>
+                    <input type="password" class="form-control" ng-model="signupPasswordConfirm" required>
+                </div>
+                <input type="submit" value="Signup" class="btn btn-primary">
+            </form>
+        </div>
+    </div>
+</div> -->
+
+<tabset justified="true">
+    <tab heading="Login">
+      <div class="modal-header">
+        <h3 class="modal-title">Login</h3>
+      </div>
+      <div class="modal-body">
+        <form ng-submit="login()">
+          <div class="form-group">
             <label>Email</label>
-            <input type="text" class="form-control" ng-model="email" required>
-        </div>
-        <div class="form-group">
+            <input type="text" class="form-control" ng-model="loginData.email" required>
+          </div>
+          <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control" ng-model="password" required>
+            <input type="password" class="form-control" ng-model="loginData.password" required>
+          </div>
+            <input type="submit" class="btn btn-primary" value="Login">
+        </form>
         </div>
-        <input type="submit" value="Login" class="btn btn-primary">
-    </form>
-</div>
+      </div>
+    </tab>
+    <tab heading="Signup">
+      <div class="modal-header">
+        <h3 class="modal-title">Signup</h3>
+      </div>
+      <div class="modal-body">
+        <form ng-submit="signup()">
+          <div class="form-group">
+            <label>First Name</label>
+            <input type="text" class="form-control" ng-model="firstName" required>
+          </div>
+          <div class="form-group">
+            <label>Last Name</label>
+            <input type="text" class="form-control" ng-model="lastName" required>
+          </div>
+          <div class="form-group">
+            <label>Enter Email</label>
+            <input type="text" class="form-control" ng-model="signupEmail" required>
+          </div>
+          <div class="form-group">
+            <label>Choose Password</label>
+            <input type="password" class="form-control" ng-model="signupPassword" required>
+          </div>
+         <div class="form-group">
+            <label>Confirm Password</label>
+            <input type="password" class="form-control" ng-model="signupPasswordConfirmation" required>
+          </div>
+            <input type="submit" class="btn btn-primary" value="Signup">
+        </form>
+        </div>
+      </div>
+    </tab>
+  </tabset>
 
