--- a/assets/views/post/show.html
+++ b/assets/views/post/show.html
@@ -16,7 +16,7 @@
         <hr>
         <div class="well" ng-repeat="comment in post.comments | orderBy:'createdAt':true">
             <p>{{comment.body}}</p>
-            <p><i>{{comment.createdAt | date:'short'}}</i></p>
+            <p><i>authored by {{comment.owner.firstName || 'Unknown'}} on {{comment.createdAt | date:'short'}}</i></p>
         </div>
     </div>
 </div>
